# python_sns

./: .gitignore  pyproject.toml
blog/: pytest.ini  response_middleware.py
blog/auth/: auth_mixin.py  authenicator.py  jwt_.py
blog/blog/: settings.py  urls.py
blog/comment/: filters.py  models.py  serializers.py  urls.py  views.py
blog/invitation/: models.py
blog/permissions/: author.py  invitation.py
blog/post/: models.py  serializers.py  urls.py  validator.py  views.py
blog/post/migrations/: 0001_initial.py  0002_alter_post_author_id.py  0003_rename_author_id_comment_author_and_more.py  0004_alter_post_id.py  0005_alter_comment_id_alter_post_id.py  0006_alter_comment_updated_at_alter_post_id_and_more.py  0007_alter_comment_updated_at_alter_post_author_and_more.py
blog/post/selectors/: post_selector.py
blog/response/: exceptions.py  validator.py
blog/serializers/: post_serializer.py  user_serializer.py
blog/test/: fixtures.py  test_comment.py  test_post.py  test_user.py  utils.py
blog/user/: forms.py  models.py  urls.py  views.py
blog/user/auth/: jwt_.py  validator.py
blog/user/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_user_is_staff.py  0004_user_is_active.py  0005_alter_user_updated_at_refreshtoken.py  0006_alter_refreshtoken_token_and_more.py
blog/user/templates/: login.html  register.html
